<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Signu</string>
    <string name="action_settings">Settings</string>

    <string name="list_cert">My Certificates</string>
    <string name="create_cert">Create certificate</string>
    <string name="info_user">Info user</string>
    <string name="edit_user">Edit user</string>
    <string name="original_name">Original name</string>

    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="email">Email</string>
    <string name="new_email">New email</string>
    <string name="password">Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="preg_member">Still not in Signu\'s family?</string>
    <string name="lastname">Lastname</string>

    <!-- Error messages -->
    <string name="email_required">Email required</string>
    <string name="password_required">Password must be bigger</string>

    <!-- Info messages -->
    <string name="info_signup">Info: Signu will send you an email to confirm your email and give you a provisional password</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="new_name">New name</string>
    <string name="new_lastname">New lastname</string>
    <string name="signers">Signers</string>
    <string name="owner">Owner</string>
    <string name="title_activity_navigation">Signu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Signu</string>
    <string name="nav_header_subtitle">Keep calm and sign</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="pdfs_owned">PDFs Owned</string>
    <string name="pdfs_to_sign">PDFs to sign</string>
    <string name="pdfs_signed">PDFs signed</string>
    <string name="title_home">Title Home</string>
    <string name="title_dashboard">Title dashboard</string>
    <string name="title_notifications">Title notifications</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="users_related">Users Related</string>
    <string name="see_pdf">See PDF</string>
    <string name="info_pdf">Info PDF</string>
    <string name="sign_pdf">Sign PDF</string>
    <string name="add_signers">Add signers</string>
    <string name="edit_pdf">Edit PDF</string>
    
    <!-- Snackbar -->
    <string name="check_downloads">Check your Downloads folder</string>
    <string name="wrong">Something went wrong</string>
    <string name="exception">An exception ocurred</string>

</resources>
